# dcpkg

./: .pypirc  README.md  pyproject.toml
src/: DCAutoEDA.py  DCutility.py
src/dcpkg.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
