[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"


[project]
name = "dcpkg"
version = "0.0.3"
authors = [
  { name="Dwaipayan Chakroborti", email="dcgkpindiastudy@gmail.com" },
]
description = "Packages to work for Machine learning and deep learning projects"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/users/dcgkpindiastudy/projects/2"
"Bug Tracker" = "https://github.com/users/dcgkpindiastudy/projects/2/views/1"